<resources>
    <string name="app_name">Precautia</string>
    <string name="_24_7_healthcare">24*7_Healthcare</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="register_for_new_user">Register for new user</string>
    <string name="Proceed">Proceed</string>
    <string name="comfirm_password">Comfirm password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="registration">Registration</string>
    <string name="lab_test">Lab Test</string>
    <string name="buymedicine">BuyMedicine</string>
    <string name="BuyMedicine" />
    <string name="Health_Articles" />
    <string name="logout">Logout</string>
    <string name="finddoctor">FindDoctor</string>
    <string name="find_doctor">find_doctor</string>
    <string name="Find_Doctor">find doctor</string>
    <string name="FindDoctor">Find_Doctor</string>
    <string name="findDoctor">Find Doctor</string>
    <string name="buy_medicine">Buy Medicine</string>
    <string name="health_articles">Health Articles</string>
    <string name="order_details">Order Details</string>
    <string name="Logout">Logout</string>
    <string name="xyz">xyz</string>
    <string name="home_remedies">Home Remedies</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="_24_7_healthcare1">24/7 healthcare</string>
    <string name="top_doctors">Top Doctors</string>
    <string name="family_physician">Family Physician</string>
    <string name="dentist">Dentist</string>
    <string name="dietitian">Dietitian</string>
    <string name="surgeon">Surgeon</string>
    <string name="cardiologist">cardiologist</string>
    <string name="cardiologist1">Cardiologist</string>
    <string name="back">Back</string>
    <string name="family_physician1">Family Physician</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="fees">Fees</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="book_appointment1">Book Appointment</string>
    <string name="go_to_cart">Go To Cart</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="deliver_location_pune">Deliver Location : Pune</string>
    <string name="lab_test_and_packages">Lab Test And Packages</string>
    <string name="hi_nhello">Hi /nHello</string>
    <string name="hi_nhello1">Hi /nHello</string>
    <string name="lab_test_cart_items_android_textcolor">Lab Test Cart Items android:textColor=</string>
    <string name="lab_test_cart_items">Lab Test Cart Items</string>
    <string name="checkout">Checkout</string>
    <string name="please_fill_all_the_details">"Please Fill All The Details For Booking "</string>
    <string name="Back">Back\n</string>
    <string name="todo">TODO</string>
</resources>